tests added, debugged