@@ -1,10 +1,11 @@
 package ua.edu.ucu.collections;
 
 import ua.edu.ucu.collections.immutable.ImmutableLinkedList;
+import ua.edu.ucu.collections.immutable.ImmutableList;
 import ua.edu.ucu.collections.immutable.Node;
 
 public class Queue {
-    private ImmutableLinkedList queue;
+    private ImmutableList queue;
 
     public Queue(){
         this.queue = new ImmutableLinkedList();
@@ -14,13 +15,13 @@ public class Queue {
     }
 
     public Object peek() {
-        return this.queue.getHead();
+        return this.queue.get(0);
     }
 
     public Object dequeue() {
         if (this.queue.size()!=0) {
-            Node temp = this.queue.getHead();
-            this.queue = this.queue.removeFirst();
+            Object temp = this.queue.get(0);
+            this.queue = this.queue.remove(0);
             return temp;
         }
         else{
@@ -29,6 +30,11 @@ public class Queue {
     }
 
     public void enqueue(Object e) {
-        this.queue = this.queue.addLast(e);
+        if (this.queue.size() == 1){
+            this.queue = this.queue.add(e);
+        }
+        else {
+            this.queue = this.queue.add(e);
+        }
     }
 }
